--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wiki-ibm-cloud-foundry",
   "version": "2.0.0",
-  "description": "Deployment to IBM Cloud Foundry public of an open source, modern and powerful wiki app built on Node.js, Git and Markdown.",
+  "description": "Deployment to the IBM Cloud Foundry public of an open source, modern and powerful wiki app built on Node.js, Git and Markdown.",
   "main": "index.js",
   "scripts": {
     "postinstall": "chmod +x install.sh && bash ./install.sh",
